@@ -77,8 +77,6 @@ multi-arch = @multi_arch@
 
 mach-interface-list = @mach_interface_list@
 
-experimental-malloc = @experimental_malloc@
-
 memory-tagging = @memory_tagging@
 
 nss-crypt = @libc_cv_nss_crypt@
